--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@floating-ui/react-dom-interactions": "^0.6.3",
     "@material/react-material-icon": "^0.15.0",
     "@material/react-text-field": "^0.15.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -10,7 +11,6 @@
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.3.1",
     "deepmerge": "^4.2.2",
-    "downshift": "^6.1.7",
     "framer-motion": "^6.3.10",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -19,6 +19,7 @@
     "react-merge-refs": "^1.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "react-textarea-autosize": "^8.3.4",
     "web-vitals": "^2.1.0"
   },
@@ -50,6 +51,7 @@
     "@material-tailwind/react": "^1.0.3",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@typescript-eslint/parser": "^5.27.1",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
