--- a/package.json
+++ b/package.json
@@ -48,15 +48,25 @@
     ]
   },
   "devDependencies": {
-    "@material-tailwind/react": "^1.0.3",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@typescript-eslint/parser": "^5.27.1",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
+    "prettier": "^2.6.2",
     "sass": "^1.52.2",
     "sass-loader": "^13.0.0",
-    "tailwindcss": "^3.0.24"
-  }
+    "tailwindcss": "^3.1.2"
+  },
+  "lint": "eslint .",
+  "lint:fix": "eslint --fix"
 }
