--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "classnames": "^2.3.1",
     "deepmerge": "^4.2.2",
     "framer-motion": "^6.3.10",
+    "fuse.js": "^6.6.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^7.31.3",
+    "react-hook-form": "^7.32.1",
     "react-merge-refs": "^1.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-textarea-autosize": "^8.3.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
