--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^7.32.1",
+    "react-hook-form": "^7.33.0",
     "react-merge-refs": "^1.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -62,6 +62,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "prettier": "^2.6.2",
